LettergonWeb/battle.css
* {
    -webkit-tap-highlight-color: transparent;
    font-family: Montserrat, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
}

html, body {
    height: 100%;
    background-color: #222;
    color: #ccc;
}

input, button {
    background-color: #444;
    color: #ccc;
    border-radius: .25rem;
    padding: 5px;
}

input {
    border: 1px solid #444;
    margin: 5px;
}

input:focus {
    box-shadow: 0 0 0 0.15rem #555;
    outline: 0;
}

button {
    border: 1px solid transparent;
}

button:focus {
    background-color: #333;
    outline: 0;
}

#c {
    display: block;
    margin: auto;
    user-select: none;
    touch-action: manipulation;
    width: 300px;
    height: 300px;
}

#w {
    display: block;
    margin: auto;
    margin-top: 20px;
    width: 100%;
    max-width: 200px;
    padding: 10px;
}

#t {
    margin: auto;
    margin-top: 20px;
    width: 100%;
    max-width: 750px;
    table-layout: fixed;
    border-spacing: 5px;
}

#t tr {
    height: 2.2rem;
}

#t td {
    border-radius: .25rem;
    background-color: #333;
}

#t td.mine {
    border: 3px solid #141;
    background-color: #141;
    color: #c0f0d0;
}

#t td.not-found {
/*
    background-color: #522;
    color: #ffc0c0;
*/
}

#pl {
    margin-top: 20px;
    padding-bottom: 8px;
}

#pl table {
    margin: auto;
    width: 100%;
    max-width: 350px;
    table-layout: fixed;
    border-collapse: collapse;
}

#pl th.playerColor {
    width: 5px;
    border: none;
    padding: 0;
}

#pl td, #pl th {
    border: 1px solid #ccc;
}

#pl div {
    margin-top: 10px;
    text-align: center;
}

#rl {
    -webkit-user-select: all;
    user-select: all;
}

#im {
    margin: auto;
    width: 100%;
    height: 40%;
    display: flex;
    align-items: flex-end;
    justify-content: center;
    max-width: 750px;
    text-align: center;
}

tr {
    height: 2em;
}

tr.me td {
    font-weight: bold;
}

tr.left td {
    color: #666;
    font-style: italic;
}

td, th {
    padding-left: 10px;
}

div.info {
    overflow: auto;
    margin: 10px;
}

div.info-l {
    float: left;
}

div.info-r {
    float: right;
}

div.info-r span {
    display: inline-block;
}

div.info-r input {
    width: 100px;
}

.error {
    background-color: #400;
}

.hidden {
    display: none !important;
}

